# sekha-llm-bridge

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  MIGRATION.md  README.md  TESTING.md  config.yaml.example  docker-compose.yml  fix_all_imports.py  main.py  pyproject.toml  pytest.ini  pytest.ini text  requirements.txt
.github/workflows/: ci.yml  pypi-release.yml  release.yml  security.yml  tests.yml
docs/: CI-FIXES.md  MODULE_1_README.md  MODULE_2_README.md  MODULE_4_README.md  MODULE_5_COMPLETION.md  MODULE_5_README.md  PHASE_0_README.md  V2.0_COMPLETION_SUMMARY.md
docs/developer/: bridge-architecture.md  orchestrator.md
docs/user/: bridge-usage.md
models/: requests.py  responses.py
scripts/: pre-publish.sh  run-tests.sh  test.sh
sekha_llm_bridge/: celery_app.py  config.py  main.py  schemas.py  tasks.py  worker.py
services/: embedding_service.py  entity_extraction_service.py  importance_scorer.py  summarization_service.py
src/sekha_llm_bridge/: config.py  main.py  pricing.py  py.typed  registry.py  resilience.py  routes_v2.py  tasks.py
src/sekha_llm_bridge/models/: __init__.py  init.py  requests.py  responses.py
src/sekha_llm_bridge/providers/: __init__.py  base.py  litellm_provider.py
src/sekha_llm_bridge/services/: embedding_service.py  entity_extraction_service.py  importance_scorer.py  summarization_service.py
src/sekha_llm_bridge/utils/: llm_client.py  llm_client.py.different
src/sekha_llm_bridge/workers/: celery_app.py
tests/: E2E_TEST_SETUP.md  README.md  conftest.py  test_chat_completions.py  test_client.py  test_config.py  test_e2e_stack.py  test_embed.py  test_health.py  test_integration_v2.py  test_main.py  test_memory_search_tool.py  test_memory_store_tool.py  test_models.py  test_pricing.py  test_providers.py  test_registry.py  test_resilience.py  test_routes_v2.py  test_score_importance.py  test_services.py  test_summarize.py  test_tasks.py  test_tools.py  test_vision.py  test_vision_enhanced.py  test_vision_unit.py  test_worker.py
tests/e2e/: README.md  __init__.py  conftest.py  test_full_flow.py  test_resilience.py
tests/integration/: test_api_health.py  test_cost_limits.py  test_embeddings.py  test_provider_routing.py  test_resilience_integration.py  test_vision.py
utils/: llm_client.py
workers/: celery_app.py
