[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "sekha-llm-bridge"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.2",
    "litellm>=1.81.3",
    "celery>=5.4.0",
    "redis>=7.1.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "tenacity>=9.1.2",
    "prometheus-client>=0.24.1",
    "sqlalchemy>=2.0.46",
    "alembic>=1.17.2",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "config>=0.5.1",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.poetry]
name = "sekha-llm-bridge"
version = "0.2.0"
description = "Universal LLM adapter service for Sekha AI - Multi-provider bridge supporting 100+ LLMs via LiteLLM"
authors = ["Sekha AI <dev@sekha-ai.dev>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
homepage = "https://sekha.dev"
repository = "https://github.com/sekha-ai/sekha-llm-bridge"
documentation = "https://docs.sekha.dev"
keywords = [
    "ai",
    "llm",
    "litellm",
    "embeddings",
    "memory",
    "ollama",
    "openai",
    "anthropic",
    "claude",
    "gemini",
    "rag",
    "fastapi",
    "async",
    "multi-provider",
    "router",
    "bridge",
    "adapter",
    "openrouter",
    "summarization",
    "entity-extraction"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: FastAPI",
    "Framework :: AsyncIO",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
packages = [
    { include = "sekha_llm_bridge", from = "src" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sekha-ai/sekha-llm-bridge/issues"
"Changelog" = "https://github.com/sekha-ai/sekha-llm-bridge/blob/main/CHANGELOG.md"
"Funding" = "https://github.com/sponsors/sekha-ai"
"Discord" = "https://discord.gg/gZb7U9deKH"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.129,<0.132"
uvicorn = { extras = ["standard"], version = "^0.40.0" }
pydantic = "^2.9.0"
pydantic-settings = "^2.13.0"
litellm = "^1.81.12"
celery = "^5.4.0"
redis = "^7.1.0"
httpx = "^0.28.1"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
tenacity = "^9.1.2"
prometheus-client = "^0.24.1"
sqlalchemy = "^2.0.46"
alembic = "^1.17.2"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.2.1"
numpy = "^2.4.1"
pandas = "^3.0.0"
scikit-learn = "^1.8.0"
config = "^0.5.1"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
ruff = "^0.15.1"
mypy = "^1.14.1"
pytest-cov = "^7.0.0"
types-PyYAML = "^6.0.12"

[tool.poetry.scripts]
llm-bridge = "sekha_llm_bridge.main:run"

[tool.black]
line-length = 88
target-version = ["py312", "py314"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  # exclude this specific test file that has formatting issues
  | tests/test_services\.py
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.coverage.run]
omit = [
    "src/sekha_llm_bridge/tasks.py",
    "src/sekha_llm_bridge/worker.py",
    "src/sekha_llm_bridge/workers/*",
    "src/sekha_llm_bridge/models/init.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
